--- a/inc/css/style.css
+++ b/inc/css/style.css
@@ -46,8 +46,8 @@ a:hover, a:focus{
 }
 
 input[type=text], input[type=password]{
-    color: #313131;
-    padding: 0px 12px;
+    width: 100%; height: 40px; padding: 7px; font-size: 16px; color: #313131; margin-bottom: 15px; border: none;
+    border: 1px solid #c9c9c9;
 }
 
 h1, h2{
@@ -824,7 +824,7 @@ span.icon.blue-chevron-down {
     width: 100%;
 }
 
-.gui_form_table input[type=text]{
+.gui_form_table input[type="text"]{
     width: 100%;
     height: 40px;
     padding: 7px;
