--- a/views/guestpage/guest_area.html
+++ b/views/guestpage/guest_area.html
@@ -11,7 +11,7 @@
                     <input type="password" id="password" placeholder="Your Password" class="checkReg">
                     <span id="checkPasswordStatus" class="regError"><div class="arrow-right"></div></span>
                     <input type="password" style="margin-bottom:15px;" id="passwordRepeat" placeholder="Repeat Password" class="checkReg">
-                    <span style="display: inline-block;padding-top: 10px"><input type="checkbox" style="display: inline-block;" class="checkRegBox"> I accept the <a href="http://wiki.transparency-everywhere.com/en/index.php/Policy" target="_blank">terms</a></span>
+                    <span style="display: inline-block;padding-top: 10px"><input type="checkbox" style="display: inline-block;" class="checkRegBox" name="checkTemrs"> <label for="checkTerms">I accept the <a href="http://wiki.transparency-everywhere.com/en/index.php/Policy" target="_blank">terms</a></label></span>
                     <input type="hidden" value="" id="checkReg">
                     <input type="submit" class="button" value="Sign me up!">
                     </form>
